[tool.poetry]
name = "deepreefmap-rcp"
version = "0.1.0"
description = ""
authors = ["Evan Thomas <evan.thomas@epfl.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
boto3 = "^1.34.76"
pydantic-settings = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
